--- a/assets/menu-style.css
+++ b/assets/menu-style.css
@@ -12,8 +12,6 @@ h1, h2, h3, h4, h5, h6, p{
     margin: 0;
 }
 
-/* header */
-
 .header {
     background-color: rgba(252, 252, 252, 0.8);
     backdrop-filter: saturate(180%) blur(10px);
@@ -81,8 +79,6 @@ h1, h2, h3, h4, h5, h6, p{
     color: #6C9B55;
 }
 
-/* home */
-
 .home {
     color: #FFFFFF;
     margin-top: 210px;
@@ -95,7 +91,7 @@ h1, h2, h3, h4, h5, h6, p{
     margin: 0 0 0 auto;
     width: 66%;
     
-    background: #699635;
+    background: #F2B200;
     border-radius: 30px 0px 0px 30px;
 }
 
@@ -129,107 +125,83 @@ h1, h2, h3, h4, h5, h6, p{
     padding-right: 200px;
 }
 
-/* map */
-
-.map {
-    text-align: center;
+.menu {
+    margin-top: 160px;
 }
 
-.map-title h1 {
-    font-family: 'Varta', sans-serif;
-    font-weight: 700;
-    font-size: 64px;
-    line-height: 96px;
+.menutitle {
+    max-width: 80%;
+    margin: 0 auto 104px auto;
+    font-weight: 600;
+    font-size: 40px;
+    line-height: 49px;
     text-transform: uppercase;
 }
 
-/* form */
-
-.form {
-    box-sizing: border-box;
-    width: 80%;
-    margin: 220px auto 172px auto;
+.menubox {
+    max-width: 80%;
+    margin: 0 auto;
 }
-  
-.inputs {
+
+.items {
     display: flex;
-    padding-bottom: 45px;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
 }
-  
-.input-container {
+
+.item {
+    display: flex;
+    padding-bottom: 81px;
+}
+
+.itemimage {
+    width: 227px;
+    height: 210px;
+}
+
+.itemcontent {
     position: relative;
-}
-  
-.inputs .input-container:nth-child(1) {
-    width: 40%;
-    padding-right: 2%;
-}
-  
-.inputs .input-container:nth-child(2) {
-    width: 58%;
+    padding-left: 25px;
+    width: 400px;
 }
 
-.input-container:nth-child(1) {
-    width: 100%;
-}
-
-.input {
-    padding: 23px 52px;
-    border: 2px solid #eee;
-    box-sizing: border-box;
-    border-radius: 70px;
-  
-    font-weight: 500;
-    font-size: 40px;
-    line-height: 49px;
-    color: rgba(16, 0, 0, 0.6);
-  
-    resize: vertical;
-    outline: 0;
-    width: 100%;
-  
-    transition: border 0.3s;
-}
-  
-.input:hover {
-    border: 2px solid #aaa;
-}
-  
-.input:focus {
-    border: 2px solid #555;
-}
-  
-.textarea {
-    height: 327px;
-}
-  
-.submit {
-    text-align: center;
-    padding-top: 91px;
-}
-  
-.submit-button {
-    color: #FFFFFF;
-    text-decoration: none; 
-    user-select: none;
-    background: #F2B200;
-    padding: 9px 100px;
-    border-radius: 70px;
-    cursor: pointer;
-    transition: .3s;
-  
+.itemname {
+    height: 70px;
     font-weight: 600;
-    font-size: 48px;
-    line-height: 59px;
-  
-    border: none;
+    font-size: 30px;
+    line-height: 37px;
+    margin-bottom: 15px;
 }
 
-.submit-button:hover {
-    background-color: #ffc72e;
+.itemdesc {
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 29px;
+    color: rgba(0, 0, 0, 0.51);
+    margin-bottom: 30px;
 }
 
-/* consultation */
+.info {
+    position: absolute;
+    bottom: 0;
+    display: flex;
+    align-items: center;
+}
+
+.infoitem {
+    display: flex;
+    align-items: center;
+}
+
+.infotext {
+    font-family: Varta, sans-serif;
+    font-weight: 700;
+    font-size: 14px;
+    color: rgba(0, 0, 0, 0.57);
+    padding-left: 5px;
+    padding-right: 10px;
+}
 
 .consultation_inner {
     margin-top: 250px;
@@ -289,8 +261,6 @@ h1, h2, h3, h4, h5, h6, p{
     color: rgba(0, 0, 0, 0.5);
 }
 
-/* footer-head */
-
 .footer {
     margin-top: 200px;
 }
@@ -339,8 +309,6 @@ h1, h2, h3, h4, h5, h6, p{
     transform: scale(1.2);
 }
 
-/* footer-inner: sitemap */
-
 .footer-inner {
     display: flex;
     margin-top: 43px;
@@ -388,8 +356,6 @@ h1, h2, h3, h4, h5, h6, p{
 .sitemap-list_right {
     float: right;
 }
-
-/* footer-inner: contact */
 
 .contact {
     margin-right: 300px;
@@ -456,8 +422,6 @@ h1, h2, h3, h4, h5, h6, p{
     color: #699635;
 }
 
-/* footer-copyright */
-
 .footer-copyright {
     margin: 200px 0 86px 118px;
     display: flex;
@@ -480,150 +444,4 @@ h1, h2, h3, h4, h5, h6, p{
     font-size: 18px;
     line-height: 22px;
     color: rgba(0, 0, 0, 0.5);
-}
-
-
-.form-error {
-  background-color: rgba(255, 0, 0, 0.05);
-  border-left: 5px solid #f2b200;
-  padding: 15px 25px;
-  margin-bottom: 25px;
-  border-radius: 10px;
-  font-size: 20px;
-  color: #000;
-  font-weight: 500;
-}
-
-.form-error p {
-  margin: 5px 0;
-}
-
-.form-error .success {
-  color: #699635;
-  background-color: rgba(105, 150, 53, 0.05);
-  border-left: 5px solid #699635;
-}
-
-/* ===== Contact Us Section ===== */
-.contactus-block {
-  width: 100%;
-  background-color: #f7f7f7;
-  padding: 120px 0;
-  text-align: center;
-  margin-top: 200px;
-  border-top: 2px solid #eaeaea;
-}
-
-.contactus-content {
-  width: 60%;
-  margin: 0 auto;
-}
-
-.contactus-title {
-  font-size: 48px;
-  font-weight: 700;
-  color: #000;
-  margin-bottom: 20px;
-}
-
-.contactus-text {
-  font-size: 22px;
-  color: rgba(0, 0, 0, 0.6);
-  margin-bottom: 40px;
-}
-
-.contactus-btn {
-  background-color: #699635;
-  color: #fff;
-  border: none;
-  padding: 18px 60px;
-  border-radius: 70px;
-  cursor: pointer;
-  font-size: 26px;
-  font-weight: 600;
-  transition: background 0.3s ease, transform 0.2s ease;
-}
-
-.contactus-btn:hover {
-  background-color: #7ab13c;
-  transform: scale(1.05);
-}
-
-/* ===== Popup Contact Form ===== */
-.popup {
-  display: none;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.5);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 9999;
-}
-
-.popup-content {
-  background: #fff;
-  border-radius: 20px;
-  padding: 40px;
-  width: 400px;
-  text-align: center;
-  position: relative;
-  animation: popup-fade 0.3s ease;
-}
-
-@keyframes popup-fade {
-  from { transform: scale(0.8); opacity: 0; }
-  to { transform: scale(1); opacity: 1; }
-}
-
-.popup-close {
-  position: absolute;
-  top: 15px;
-  right: 20px;
-  font-size: 30px;
-  cursor: pointer;
-  color: #699635;
-  transition: color 0.3s ease;
-}
-
-.popup-close:hover {
-  color: #F2B200;
-}
-
-.popup-input,
-.popup-textarea {
-  width: 100%;
-  padding: 15px;
-  margin: 15px 0;
-  border-radius: 10px;
-  border: 2px solid #ccc;
-  font-size: 18px;
-  outline: none;
-}
-
-.popup-input:focus,
-.popup-textarea:focus {
-  border-color: #699635;
-}
-
-.popup-textarea {
-  height: 120px;
-}
-
-.popup-submit {
-  background-color: #F2B200;
-  color: #fff;
-  border: none;
-  padding: 12px 40px;
-  border-radius: 50px;
-  font-size: 20px;
-  cursor: pointer;
-  transition: background 0.3s ease;
-}
-
-.popup-submit:hover {
-  background-color: #ffc72e;
 }
